# cpp-functional

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: StaticAnalyzers.cmake
include/functional-cpp/chapter-01/: count-lines-stdcount.h  count-lines-transform.h
include/functional-cpp/chapter-02/: average-score.h  count-lines-using-accumulate.h  filter-and-transform-combined.h  move-selected.h
include/functional-cpp/common/: person.h
src/: CMakeLists.txt  main.cpp
src/chapter-01/: count-lines-stdcount.cpp  count-lines-transform.cpp
src/chapter-02/: average-score.cpp  count-lines-using-accumulate.cpp
src/mylib/: CMakeLists.txt
test/: CMakeLists.txt  chapter-01-test.cpp  chapter-02-test.cpp
